--- a/XplayKitPvP/.project
+++ b/XplayKitPvP/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>KitPvP</name>
+	<name>XplayKitPvP</name>
 	<comment></comment>
 	<projects>
 	</projects>
